updated policies tab

--- a/index.html
+++ b/index.html
@@ -360,36 +360,32 @@
         </div>
         <div class="modal-body">
           <p>
-            This interactive visualization maps how major social media platforms
-            have evolved their content policies and moderation approaches over
-            time, positioned on a political matrix.
+            This interactive visualization tracks the evolution of social media platforms' content moderation policies from 2015-2025, mapping their positions on a political compass based on specific policy decisions, bans, and leadership changes.
           </p>
           <h3>How to use:</h3>
           <ul>
-            <li>
-              Use the timeline slider to see how platforms have shifted over
-              time
-            </li>
-            <li>
-              Filter platforms using the checkboxes to focus on specific
-              companies
-            </li>
-            <li>
-              Click on a platform to see detailed information about their policy
-              changes
-            </li>
-            <li>Explore key events that influenced policy shifts</li>
+            <li>Use the timeline slider or press "Play" to see how platforms have shifted their moderation stances over time</li>
+            <li>Filter platforms using the checkboxes to focus on specific companies</li>
+            <li>Click on any platform dot to view detailed information about their policy changes and position</li>
+            <li>Explore key events in the timeline that influenced platform policy shifts</li>
+            <li>Switch between "Platforms" and "Leadership" views using the top navigation buttons</li>
           </ul>
-          <h3>About the matrix:</h3>
+          <h3>Understanding the matrix:</h3>
           <p>
-            The horizontal axis represents Left-Right political orientation from
-            -1 (left) to +1 (right). The vertical axis represents
-            Authoritarian-Libertarian approaches from -1 (libertarian) to +1
-            (authoritarian).
+            <strong>Horizontal axis (Left-Right):</strong> Represents political orientation from -1 (left-leaning policies) to +1 (right-leaning policies), based on content moderation decisions and algorithmic bias.
           </p>
+          <p>
+            <strong>Vertical axis (Authoritarian-Libertarian):</strong> Measures control approach from -1 (minimal moderation, "free speech" emphasis) to +1 (heavy moderation, centralized control).
+          </p>
+          <h3>What the positions mean:</h3>
+          <ul>
+            <li><strong>Authoritarian Left:</strong> Strong content moderation with progressive policy enforcement</li>
+            <li><strong>Authoritarian Right:</strong> Heavy control favoring conservative viewpoints</li>
+            <li><strong>Libertarian Left:</strong> Minimal moderation with progressive user base</li>
+            <li><strong>Libertarian Right:</strong> "Free speech" approach with conservative-leaning policies</li>
+          </ul>
           <p class="note">
-            Data source: Platform policy positions from 2015-2025 based on
-            content moderation practices and policy changes.
+            <strong>Data methodology:</strong> Platform positions are based on documented policy changes, content moderation decisions, leadership statements, and major ban events from 2015-2025. Positions reflect relative changes over time rather than absolute political stances.
           </p>
         </div>
       </div>
